Integrate the login page with the API

--- a/project/src/app/pages/signin/signin.component.scss
+++ b/project/src/app/pages/signin/signin.component.scss
@@ -1,4 +1,4 @@
-main{
+main {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -7,7 +7,7 @@ main{
     height: 100vh;
 }
 
-form{
+form {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -17,12 +17,18 @@ form{
     mat-form-field {
         width: -webkit-fill-available;
     }
+    mat-form-field {
+        margin-bottom: 10px;
+    }
+
     button {
         margin: 5px 0;
+
         &[mat-button] {
             width: auto;
         }
     }
+
     .aligned-to-right {
         display: flex;
         justify-content: end;
@@ -31,6 +37,14 @@ form{
     }
 }
 
-h1{
-    color: #79DB70;
+.button-loader {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 8px 0;
+}
+
+.recover-password {
+    padding-left: 62px;
+    padding-right: 62px;
 }
