fix the issues found

--- a/project/src/app/components/navbar/navbar.component.html
+++ b/project/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-    <div>example@email.com</div>
+    <div></div>
     <button mat-button color="accent" (click)="logout()" test-id="logout-button">
         Logout
     </button>
