Passenger Management Implementation

--- a/project/src/app/components/navbar/navbar.component.html
+++ b/project/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,11 @@
 <mat-toolbar color="primary">
-    <div></div>
+    <button (click)="goToPassenger()" class="button button-1">Passenger Management</button>
+    <button class="button button-2">Reservation and Ticketing</button>
+    <button class="button button-3">Flight Management</button>
     <button mat-button color="accent" (click)="logout()" test-id="logout-button">
         Logout
     </button>
 </mat-toolbar>
+
+
+
