--- a/project/src/app/pages/home/home.component.html
+++ b/project/src/app/pages/home/home.component.html
@@ -13,14 +13,14 @@
       </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let user of users">
-        <td>{{ user.id }}</td>
+        <tr *ngFor="let user of users; let i = index ">
+        <td>{{ i + 1 }}</td>
         <td>{{ user.name }}</td>
         <td>{{ user.email }}</td>
         <td>{{ user.role }}</td>
         <td>
-          <button (click)="editUser(user)">Edit</button>
-          <button (click)="deleteUser(user)">Delete</button>
+          <button (click)="editUser(user)"class="button-32" role="button">Edit</button>
+          <button (click)="deleteUser(user)"class="button-33" role="button">Delete</button>
         </td>
       </tr>
     </tbody>
