Reservation and Ticketing Implementation

--- a/project/src/app/components/navbar/navbar.component.html
+++ b/project/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,7 @@
 <mat-toolbar color="primary">
+    <button (click)="goToHome()" class="button button-1">Home</button>
     <button (click)="goToPassenger()" class="button button-1">Passenger Management</button>
-    <button class="button button-2">Reservation and Ticketing</button>
+    <button (click)="goToTicketing()" class="button button-2">Reservation and Ticketing</button>
     <button class="button button-3">Flight Management</button>
     <button mat-button color="accent" (click)="logout()" test-id="logout-button">
         Logout
