--- a/project/src/app/components/navbar/navbar.component.html
+++ b/project/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,6 @@
 <mat-toolbar color="primary">
     <button (click)="goToHome()" class="button button-1">Home</button>
+    <button (click)="goToUser()" class="button button-1">User Management</button>
     <button (click)="goToPassenger()" class="button button-1">Passenger Management</button>
     <button (click)="goToTicketing()" class="button button-2">Reservation and Ticketing</button>
     <button (click)="goToFlight()" class="button button-3">Flight Management</button>
