--- a/project/src/app/pages/user/user.component.html
+++ b/project/src/app/pages/user/user.component.html
@@ -1,6 +1,6 @@
 <app-navbar></app-navbar>
 <br/>
-<h1>Airline Ground Management System</h1>
+<h1>User Management</h1>
 <button (click)="generatePDF()" class="button-34" role="button">Generate PDF</button>
 <br/><br/>
 <table>
@@ -27,14 +27,12 @@
     </tbody>
   </table>
   <br/><br/>
-  <h1>Add User Information</h1>
+  <h1>
+    {{ userForm.value.id ? 'Update User Information' : 'Add User Information' }}
+  </h1>
 <br/><br/>
 
   <form  [formGroup]="userForm" (ngSubmit)="submitForm()">
-    <div class="form-group">
-      <label for="id">User ID</label>
-      <input type="id" class="form-control" id="id"  placeholder="User ID" formControlName="id"  readonly>
-    </div>
     <div class="form-group">
         <label for="name">Full Name</label>
         <input type="name" class="form-control" id="name" placeholder="Enter Name" formControlName="name" >
